--- a/ViaJsonBuilder/_Imports.razor
+++ b/ViaJsonBuilder/_Imports.razor
@@ -12,5 +12,7 @@
 @using Utf8Json
 @using ViaJsonBuilder
 @using ViaJsonBuilder.Extensions
+@using ViaJsonBuilder.Models.Extractor
+@using ViaJsonBuilder.Models.Json
 @using ViaJsonBuilder.Models.Via
 @using ViaJsonBuilder.Shared
