--- a/ViaJsonBuilder/Shared/MainLayout.razor
+++ b/ViaJsonBuilder/Shared/MainLayout.razor
@@ -1,5 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
+<div class="sidebar">
+    <NavMenu />
+</div>
+
 <div class="main">
     <div class="top-row px-4">
         <a href="http://www.keyboard-layout-editor.com/" target="_blank" class="ml-md-auto">Keyboard Layout Editor</a>
