--- a/ViaJsonBuilder/Shared/MainLayout.razor
+++ b/ViaJsonBuilder/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
 <div class="main">
     <div class="top-row px-4">
         <a href="http://www.keyboard-layout-editor.com/" target="_blank" class="ml-md-auto">Keyboard Layout Editor</a>
+        <a href="https://github.com/koktoh/ViaJsonBuilder" target="_blank" class="ml-md-5">GitHub</a>
     </div>
 
     <div class="content px-4">
