--- a/ViaJsonBuilder/Shared/MainLayout.razor
+++ b/ViaJsonBuilder/Shared/MainLayout.razor
@@ -6,7 +6,8 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://www.keyboard-layout-editor.com/" target="_blank" class="ml-md-auto">Keyboard Layout Editor</a>
+        <span class="ml-md-5"><a href="https://caniusevia.com/" target="_blank">VIA Official</a> (<a href="https://caniusevia.com/docs/specification" target="_blank">Document</a>)</span>
+        <a href="http://www.keyboard-layout-editor.com/" target="_blank" class="ml-md-5">Keyboard Layout Editor</a>
         <a href="https://github.com/koktoh/ViaJsonBuilder" target="_blank" class="ml-md-5">GitHub</a>
     </div>
 
