modify layout of header

--- a/ViaJsonBuilder/Shared/MainLayout.razor
+++ b/ViaJsonBuilder/Shared/MainLayout.razor
@@ -6,10 +6,10 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <span class="ml-md-5"><a href="https://caniusevia.com/" target="_blank">VIA Official</a> (<a href="https://caniusevia.com/docs/specification" target="_blank">Document</a>)</span>
-        <a href="http://www.keyboard-layout-editor.com/" target="_blank" class="ml-md-5">Keyboard Layout Editor</a>
-        <a href="https://github.com/koktoh/ViaJsonBuilder" target="_blank" class="ml-md-5">GitHub</a>
-        <span style="color:#333;" class="ml-md-5">Ver. @Version</span>
+        <span class="ml-md-5"><a href="https://caniusevia.com/" target="_blank">VIA Official <span class="oi oi-external-link" /></a> (<a href="https://caniusevia.com/docs/specification" target="_blank">Document <span class="oi oi-external-link" /></a>)</span>
+        <a href="http://www.keyboard-layout-editor.com/" target="_blank" class="ml-md-3">Keyboard Layout Editor <span class="oi oi-external-link" /></a>
+        <a href="https://github.com/koktoh/ViaJsonBuilder" target="_blank" class="ml-md-3">GitHub <span class="oi oi-external-link" /></a>
+        <span style="color:#333;font-size:11px;" class="ml-md-3">Ver. @Version</span>
     </div>
 
     <div class="content px-4">
