--- a/ViaJsonBuilder/_Imports.razor
+++ b/ViaJsonBuilder/_Imports.razor
@@ -11,6 +11,7 @@
 @using BlazorInputFile
 @using Utf8Json
 @using ViaJsonBuilder
+@using ViaJsonBuilder.Components
 @using ViaJsonBuilder.Extensions
 @using ViaJsonBuilder.Models.Extractor
 @using ViaJsonBuilder.Models.Json
