--- a/ViaJsonBuilder/Pages/Converter.razor
+++ b/ViaJsonBuilder/Pages/Converter.razor
@@ -2,65 +2,77 @@
 @inject IBlazorDownloadFileService BlazorDownloadFileService
 @inject KeymapBuilder KeymapBuilder
 
-<h1>キーマップコンバーター</h1>
+<PageLayout @ref="pageBase" Title="Keymap Converter" TargetFiles="@(new[] { "<keyboard>.h","info.json"})"
+            ValidateFunc="this.Validate" OnUploadFuncAsync="this.OnUpload" OnDownloadFuncAsync="this.OnDownload">
+    <table class="table table-borderless">
+        <tbody>
+            <tr>
+                <td>
+                    <textarea style="font-family: monospace; width:100%" rows="10" @bind="@SrcTxt" />
+                </td>
+                <td>
+                    <textarea style="font-family: monospace; width:100%" rows="10" @bind="@QmkConfJsonTxt" />
+                </td>
+            </tr>
 
-@if (this.HasError)
-{
-    <div class="oi oi-warning alert alert-danger">
-        @ErrorMessage
-    </div>
-}
+            <tr>
+                <td colspan="2">
+                    <button class="btn btn-primary" @onclick="this.Convert"><span class="oi oi-loop-square" /> コンバート</button>
+                </td>
+            </tr>
 
-<div class="drag-drop-zone">
-    <InputFile OnChange="OnUpload" />
-    @Status
-</div>
-
-<table class="table table-borderless">
-    <tbody>
-        <tr>
-            <td>
-                <textarea style="font-family: monospace; width:100%" rows="10" @bind="@SrcTxt" />
-            </td>
-            <td>
-                <textarea style="font-family: monospace; width:100%" rows="10" @bind="@QmkConfJsonTxt" />
-            </td>
-        </tr>
-
-        <tr>
-            <td colspan="2">
-                <button class="btn btn-primary" @onclick="Convert"><span class="oi oi-loop-square" /> コンバート</button>
-            </td>
-        </tr>
-
-        <tr>
-            <td colspan="2">
-                <textarea style="font-family: monospace; width:100%" rows="10" @bind="@DestTxt" />
-            </td>
-        </tr>
-
-        <tr>
-            <td colspan="2">
-                <button class="btn btn-primary" @onclick=@(async () => await Download())><span class="oi oi-cloud-download" /> JSON ダウンロード</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+            <tr>
+                <td colspan="2">
+                    <textarea style="font-family: monospace; width:100%" rows="10" @bind="@DestTxt" />
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</PageLayout>
 
 @code {
-    private const string DEFAULT_STATUS = "クリックまたはドラッグ&ドロップで <keyboard>.h / info.json ファイルをアップロード";
-    private string Status = DEFAULT_STATUS;
-
-    private bool HasError { get; set; } = false;
-    private string ErrorMessage { get; set; } = string.Empty;
+    private PageLayout pageBase;
 
     private string SrcTxt { get; set; }
     private string QmkConfJsonTxt { get; set; }
     private string DestTxt { get; set; }
 
+    private bool Validate(IFileListEntry file)
+    {
+        var fileName = file.Name;
+
+        return fileName.ToLower().EndsWith(".h") || fileName.ToLower().Equals("info.json");
+    }
+
+    private async Task OnUpload(IFileListEntry file)
+    {
+        var fileName = file.Name;
+
+        using var reader = new StreamReader(file.Data);
+
+        if (fileName.ToLower().EndsWith(".h"))
+        {
+            this.SrcTxt = await reader.ReadToEndAsync();
+        }
+        else if (fileName.ToLower().Equals("info.json"))
+        {
+            this.QmkConfJsonTxt = await reader.ReadToEndAsync();
+        }
+    }
+
+    private async ValueTask OnDownload()
+    {
+        if (this.DestTxt.IsNullOrWhiteSpace())
+        {
+            return;
+        }
+
+        await this.BlazorDownloadFileService.DownloadFileFromText("kle.json", this.DestTxt, "application/octet-stream");
+    }
+
     private async Task Convert()
     {
-        this.ResetError();
+        this.pageBase.ResetError();
         this.DestTxt = string.Empty;
 
         if (this.SrcTxt.IsNullOrWhiteSpace())
@@ -82,7 +94,7 @@
 
                 if (json.IsNullOrWhiteSpace())
                 {
-                    this.ShowError("LAYOUT 定義が見つかりません。");
+                    this.pageBase.ShowError("LAYOUT 定義が見つかりません。");
                     return;
                 }
 
@@ -90,82 +102,9 @@
             }
             catch
             {
-                this.ShowError("JSON への変換に失敗しました。");
+                this.pageBase.ShowError("JSON への変換に失敗しました。");
                 return;
             }
         });
-    }
-
-    private async Task OnUpload(IFileListEntry[] files)
-    {
-        this.ResetError();
-
-        var file = files.FirstOrDefault();
-
-        if (file == null)
-        {
-            return;
-        }
-
-        this.Status = "Loading...";
-
-        var fileName = file.Name;
-
-        using var reader = new StreamReader(file.Data);
-
-        try
-        {
-            if (fileName.ToLower().EndsWith(".h"))
-            {
-                this.SrcTxt = await reader.ReadToEndAsync();
-            }
-            else if (fileName.ToLower().Equals("info.json"))
-            {
-                this.QmkConfJsonTxt = await reader.ReadToEndAsync();
-            }
-        }
-        catch
-        {
-            this.ShowError("ファイルのアップロードに失敗しました。");
-            return;
-        }
-        finally
-        {
-            this.Status = DEFAULT_STATUS;
-        }
-
-        this.Status = DEFAULT_STATUS;
-    }
-
-    private async ValueTask Download()
-    {
-        this.ResetError();
-
-        if (this.DestTxt.IsNullOrWhiteSpace())
-        {
-            return;
-        }
-
-        try
-        {
-            await this.BlazorDownloadFileService.DownloadFileFromText("kle.json", this.DestTxt, "application/octet-stream");
-        }
-        catch
-        {
-            this.ShowError("JSON のダウンロードに失敗しました。");
-            return;
-        }
-    }
-
-    private void ResetError()
-    {
-        this.HasError = false;
-        this.ErrorMessage = string.Empty;
-    }
-
-    private void ShowError(string message)
-    {
-        this.ErrorMessage = message;
-        this.HasError = true;
     }
 }
