--- a/ViaJsonBuilder/Pages/Builder.razor
+++ b/ViaJsonBuilder/Pages/Builder.razor
@@ -1,4 +1,5 @@
 ﻿@page "/builder"
+@using ViaJsonBuilder.Models.Json.Via
 @inject IBlazorDownloadFileService BlazorDownloadFileService
 @inject KeyboardConfigInfoExtractor Extractor
 @inject ViaBuilder ViaBuilder
