--- a/ViaJsonBuilder/_Imports.razor
+++ b/ViaJsonBuilder/_Imports.razor
@@ -13,7 +13,7 @@
 @using ViaJsonBuilder
 @using ViaJsonBuilder.Components
 @using ViaJsonBuilder.Extensions
+@using ViaJsonBuilder.Models.Builder
 @using ViaJsonBuilder.Models.Extractor
 @using ViaJsonBuilder.Models.Json
-@using ViaJsonBuilder.Models.Via
 @using ViaJsonBuilder.Shared
